syntax = "proto3";

package pb;

import "recipe.proto";

option go_package = "github.com/PlatosCodes/momsrecipes/pb";

message GetRecipeByIDRequest {
    int64 id = 1;
  }
  
  message GetRecipeByIDResponse {
    Recipe recipe = 1;
  }